Colaboratory を使用して作成しました

--- a/numpyexercises.ipynb
+++ b/numpyexercises.ipynb
@@ -5075,14 +5075,16 @@
         "id": "kRCw64uqMHNB"
       },
       "source": [
-        "#### (66) 問題の意味不明 Considering a (w,h,3) image of (dtype=ubyte), compute the number of unique colors (★★★)"
+        "#### (66) (w, h, 3) の配列の形で表される色配列がある。 ユニークな色の数を求める。 (dtype=ubyte) とする\n",
+        "\n",
+        "問題の意味不明 Considering a (w,h,3) image of (dtype=ubyte), compute the number of unique colors (★★★)"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "bw3KufzXMHNB",
-        "outputId": "f697bcc9-c4f9-4671-bdcc-a5ea29a76d9a",
+        "outputId": "f4f94929-feb7-4ea5-a767-c6613b7ad14b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -5114,9 +5116,9 @@
         "id": "fmB49347D3SL"
       },
       "source": [
-        "問題の意味は `w*h*3` の形で表される色の配列があったとして、ユニークな色の数を調べる、というものだろう。\n",
+        "この模範解答では、実行結果が [0 1] となってしまうので、解答になっていないと思う。\n",
         "\n",
-        "模範解答では w と h を 16 と置いているので、$16 \\times 16 \\times 3 = 768$ の場所に、多分仮に、だろうが 0 と 1 を置いている。 2価なので、例えば赤 1,緑 1, 青 0 とすると、多分黄色になる。 順列組み合わせで\n",
+        "模範解答では w と h を 16 と置いているので、$16 \\times 16 \\times 3 = 768$ の場所に、多分仮に、だろうが 0 と 1 を置いている。 ということは、2価なので、例えば赤 1,緑 1, 青 0 とすると、多分黄色になる。 順列組み合わせで\n",
         "\n",
         "0 0 0  \n",
         "0 0 1  \n",
@@ -5127,51 +5129,206 @@
         "1 1 0  \n",
         "1 1 1\n",
         "\n",
-        "で 8 種類、もしくはそれ以下の結果になれば正解だと思う。\n",
+        "で最大 8 種類、もしくはそれ以下の結果になれば正解だと思う。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xNWB8C3B0xjU"
+      },
+      "source": [
+        "まず、\n",
         "\n",
-        "上記の模範解答では結果が `[0 1]` なので、多分 np.unique の使い方を間違えているか、仕様が変わったのだろう。\n"
+        "F = I[...,0]*256*256 + I[...,1]*256 +I[...,2]\n",
+        "\n",
+        "が機能していない。 やりたいことは、$16 \\times 16 \\times 3$ の配列の最後の 3 について、0 行目に 256 × 256、1 行目に 256 を掛けて、3 行を足すことによって、色の表現を配列から単なる数字に変換しようとしているのだろう。\n",
+        "\n",
+        "しかし、ubyte、である数字に大きな数を掛けて ubyte の範囲を超えると現在の仕様では 0 になってしまう。\n",
+        "\n",
+        "その証拠に print(n) とすると、 [0 0], [0 1], [1 0], [0 0] の4つが取り出されている。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "popIlr-uwEkq",
+        "outputId": "59ca80f5-d287-4fd4-86d0-7030269a367c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(n)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5dUD0GHJxHUK"
+      },
+      "source": [
+        "ので、この方法は使えない。 とりあえず 256 を 10 にすると 大丈夫そう。\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "fobNjyEoE-bo",
-        "outputId": "b2504329-2f61-472c-f5af-64221a3b3b98",
+        "outputId": "e2f1fdeb-1c6e-44cc-b534-9e9d3213b56b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
+        "# 実験\n",
+        "\n",
         "I[...,0]*3"
       ],
-      "execution_count": 19,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0, 3, 0, 3, 0, 3, 0, 3, 0, 0, 0, 0, 3, 3, 3, 0],\n",
-              "       [3, 0, 3, 0, 0, 0, 3, 3, 0, 3, 3, 3, 0, 0, 3, 3],\n",
-              "       [0, 3, 0, 3, 0, 3, 0, 3, 3, 0, 0, 0, 3, 0, 0, 3],\n",
-              "       [3, 3, 0, 3, 0, 3, 0, 3, 3, 3, 3, 3, 3, 0, 0, 3],\n",
-              "       [0, 3, 3, 3, 3, 3, 0, 3, 0, 0, 3, 3, 3, 3, 3, 3],\n",
-              "       [0, 3, 3, 3, 3, 0, 3, 3, 0, 3, 0, 0, 0, 3, 0, 3],\n",
-              "       [3, 0, 3, 0, 3, 3, 3, 0, 3, 3, 3, 0, 3, 0, 3, 3],\n",
-              "       [3, 0, 3, 0, 3, 3, 3, 3, 0, 3, 0, 0, 3, 3, 3, 3],\n",
-              "       [0, 0, 0, 3, 0, 3, 3, 0, 0, 0, 3, 3, 3, 3, 3, 3],\n",
-              "       [3, 3, 3, 0, 3, 0, 3, 3, 3, 0, 0, 0, 0, 0, 3, 3],\n",
-              "       [3, 0, 0, 3, 3, 0, 0, 0, 3, 0, 3, 0, 3, 0, 0, 0],\n",
-              "       [0, 0, 0, 3, 0, 3, 3, 3, 0, 0, 3, 3, 0, 3, 3, 3],\n",
-              "       [3, 0, 3, 3, 3, 0, 3, 3, 3, 0, 0, 0, 3, 3, 3, 0],\n",
-              "       [0, 3, 0, 3, 3, 0, 3, 0, 0, 3, 3, 0, 0, 3, 0, 0],\n",
-              "       [0, 0, 3, 3, 0, 0, 0, 0, 3, 0, 0, 0, 0, 3, 3, 3],\n",
-              "       [0, 0, 3, 3, 3, 3, 0, 0, 0, 0, 3, 0, 3, 0, 3, 3]], dtype=uint8)"
+              "array([[3, 3, 0, 3, 0, 0, 3, 3, 3, 0, 0, 3, 0, 3, 3, 0],\n",
+              "       [0, 0, 0, 0, 3, 0, 3, 3, 3, 0, 3, 3, 0, 3, 3, 0],\n",
+              "       [0, 3, 3, 0, 0, 0, 3, 3, 3, 3, 0, 0, 3, 3, 3, 3],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 3, 0, 3, 0, 3, 0, 3, 0, 0],\n",
+              "       [3, 0, 3, 0, 3, 0, 0, 0, 3, 0, 0, 3, 0, 0, 3, 3],\n",
+              "       [3, 0, 3, 3, 3, 3, 0, 0, 0, 3, 0, 3, 0, 3, 3, 3],\n",
+              "       [0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 3, 0, 3, 0],\n",
+              "       [3, 3, 0, 3, 3, 0, 0, 0, 0, 3, 3, 3, 0, 3, 3, 3],\n",
+              "       [3, 3, 3, 0, 3, 3, 3, 0, 0, 3, 3, 0, 3, 3, 3, 0],\n",
+              "       [3, 3, 3, 3, 0, 3, 0, 3, 3, 3, 3, 3, 0, 3, 3, 0],\n",
+              "       [3, 0, 0, 0, 3, 3, 3, 3, 0, 0, 0, 0, 0, 0, 3, 3],\n",
+              "       [0, 3, 3, 0, 3, 3, 3, 0, 3, 0, 0, 0, 0, 3, 0, 3],\n",
+              "       [0, 3, 3, 3, 3, 3, 0, 3, 3, 0, 0, 0, 3, 0, 0, 0],\n",
+              "       [0, 3, 0, 3, 3, 0, 0, 0, 0, 3, 3, 3, 0, 3, 3, 3],\n",
+              "       [3, 0, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 3, 0, 0],\n",
+              "       [0, 3, 3, 3, 0, 0, 3, 3, 3, 0, 3, 0, 3, 3, 3, 3]], dtype=uint8)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cgCygro92z1o",
+        "outputId": "082d017e-f580-4209-ee7a-24009fb44490",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験\n",
+        "\n",
+        "I[...,0]*256*256"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]], dtype=uint16)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9BOC_RqN28hB",
+        "outputId": "52c04bfc-d2db-4f13-b1e8-db6d1cf63849",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験\n",
+        "\n",
+        "I[...,0]*10*10"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[100, 100,   0, 100,   0,   0, 100, 100, 100,   0,   0, 100,   0,\n",
+              "        100, 100,   0],\n",
+              "       [  0,   0,   0,   0, 100,   0, 100, 100, 100,   0, 100, 100,   0,\n",
+              "        100, 100,   0],\n",
+              "       [  0, 100, 100,   0,   0,   0, 100, 100, 100, 100,   0,   0, 100,\n",
+              "        100, 100, 100],\n",
+              "       [  0,   0,   0,   0,   0,   0,   0, 100,   0, 100,   0, 100,   0,\n",
+              "        100,   0,   0],\n",
+              "       [100,   0, 100,   0, 100,   0,   0,   0, 100,   0,   0, 100,   0,\n",
+              "          0, 100, 100],\n",
+              "       [100,   0, 100, 100, 100, 100,   0,   0,   0, 100,   0, 100,   0,\n",
+              "        100, 100, 100],\n",
+              "       [  0,   0,   0,   0,   0, 100,   0,   0,   0,   0,   0,   0, 100,\n",
+              "          0, 100,   0],\n",
+              "       [100, 100,   0, 100, 100,   0,   0,   0,   0, 100, 100, 100,   0,\n",
+              "        100, 100, 100],\n",
+              "       [100, 100, 100,   0, 100, 100, 100,   0,   0, 100, 100,   0, 100,\n",
+              "        100, 100,   0],\n",
+              "       [100, 100, 100, 100,   0, 100,   0, 100, 100, 100, 100, 100,   0,\n",
+              "        100, 100,   0],\n",
+              "       [100,   0,   0,   0, 100, 100, 100, 100,   0,   0,   0,   0,   0,\n",
+              "          0, 100, 100],\n",
+              "       [  0, 100, 100,   0, 100, 100, 100,   0, 100,   0,   0,   0,   0,\n",
+              "        100,   0, 100],\n",
+              "       [  0, 100, 100, 100, 100, 100,   0, 100, 100,   0,   0,   0, 100,\n",
+              "          0,   0,   0],\n",
+              "       [  0, 100,   0, 100, 100,   0,   0,   0,   0, 100, 100, 100,   0,\n",
+              "        100, 100, 100],\n",
+              "       [100,   0,   0,   0,   0,   0,   0,   0, 100,   0,   0,   0,   0,\n",
+              "        100,   0,   0],\n",
+              "       [  0, 100, 100, 100,   0,   0, 100, 100, 100,   0, 100,   0, 100,\n",
+              "        100, 100, 100]], dtype=uint8)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
         }
       ]
     },
@@ -5179,7 +5336,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "PLxgq9NBDjdF",
-        "outputId": "b1cd0c5b-119d-4c67-d173-5f5e78c6ad6c",
+        "outputId": "2b68565e-160e-4296-aa2d-451d022b63eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -5191,15 +5348,13 @@
         "\n",
         "w,h = 16,16\n",
         "I = np.random.randint(0,2,(h,w,3)).astype(np.ubyte)\n",
-        "F = I[...,0]*100*100 + I[...,1]*100 +I[...,2]\n",
+        "F = I[...,0]*10*10 + I[...,1]*10 +I[...,2]\n",
         "n = len(np.unique(F))\n",
         "print(np.unique(I))\n",
-        "# print(np.unique(F))\n",
         "print(n)\n",
-        "# print(F)\n",
-        "# print(I[...,0]*100000)\n"
+        "\n"
       ],
-      "execution_count": 38,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -5212,10 +5367,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1zUfU4bXxoVc"
+      },
+      "source": [
+        "上記の結果で print(n) の値が 8 になるのは 8 が最大値で試験回数が多いからなので、仮に w,h = 4.4 として実行すると6とか7も出る。\n",
+        "\n",
+        "print(np.unique(F)) \n",
+        "\n",
+        "の値が [0 1] になってしまうのは、np.unique の仕様が、配列をフラットにして unique をとる。下記の例では、一旦 reshape して、axis を指定して unique をとった。"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "dCPXrZiFbnYY",
-        "outputId": "9a5f63a2-bafe-4039-9a72-d5971a379f5f",
+        "outputId": "d306bb28-4b73-43a8-a63e-b3d88f3f18fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -5226,34 +5394,40 @@
         "import numpy as np\n",
         "\n",
         "w,h = 4,4\n",
-        "I = np.random.randint(0,20,(h,w,3)).astype(np.ubyte)\n",
-        "F = I[...,0]*256*256 + I[...,1]*256 +I[...,2]\n",
+        "I = np.random.randint(0,2,(h,w,3)).astype(np.ubyte)\n",
+        "F = I[...,0]*10*10 + I[...,1]*10 +I[...,2]\n",
         "n = len(np.unique(F))\n",
-        "print(np.unique(I))"
+        "print(n)\n",
+        "print(np.unique(F))\n",
+        "np.unique(np.reshape(I, (w*h, 3)), axis=0)"
       ],
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 14 15 16 17 18 19]\n"
+            "6\n",
+            "[  0   1  11 101 110 111]\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0, 0, 0],\n",
+              "       [0, 0, 1],\n",
+              "       [0, 1, 1],\n",
+              "       [1, 0, 1],\n",
+              "       [1, 1, 0],\n",
+              "       [1, 1, 1]], dtype=uint8)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 48
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "0HCGmTxmgNcP"
-      },
-      "source": [
-        "意味不明\n",
-        "\n",
-        "\n",
-        "F = I[...,0]*(256*256) + I[...,1]*256 +I[...,2]により(R, G, B)の値をR * 256 * 256 + G * 256 + Bという単一の値に変換したあと、np.unique()で同一の色を持つ要素を削除して、残った要素数を数えています。\n",
-        "\n",
-        "C++のunique()は隣り合う同一の数値しか削除しませんが、np.unique()の場合は隣り合わない同一の数値も削除するようです。"
       ]
     },
     {
@@ -5262,15 +5436,23 @@
         "id": "-Ufp3Ff7MHND"
       },
       "source": [
-        "#### (67) Considering a four dimensions array, how to get sum over the last two axis at once? (★★★)"
+        "#### (67) 4次元の配列を考え、最後の 2 軸の合計をとる。\n",
+        "\n",
+        "Considering a four dimensions array, how to get sum over the last two axis at once? (★★★)"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IhN8Z7lQMHND"
+        "id": "IhN8Z7lQMHND",
+        "outputId": "88d3f38d-fc53-4a63-9ee1-1db7a96b885b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "import numpy as np\n",
+        "\n",
         "A = np.random.randint(0,10,(3,4,3,4))\n",
         "# solution by passing a tuple of axes (introduced in numpy 1.7.0)\n",
         "sum = A.sum(axis=(-2,-1))\n",
@@ -5280,8 +5462,77 @@
         "sum = A.reshape(A.shape[:-2] + (-1,)).sum(axis=-1)\n",
         "print(sum)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[61 43 69 38]\n",
+            " [46 46 63 46]\n",
+            " [72 53 36 55]]\n",
+            "[[61 43 69 38]\n",
+            " [46 46 63 46]\n",
+            " [72 53 36 55]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VOsG4AnGCJAV"
+      },
+      "source": [
+        "4次元で数字が多いとイメージできないので、少なくして実験してみる。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PewDm9WXCGqw",
+        "outputId": "1c7949d8-58e6-41d5-e1e5-784fa270e9bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験\n",
+        "A = np.random.randint(0,10,(2,2,2))\n",
+        "print(A)\n",
+        "print()\n",
+        "sum = A.sum(axis=(-2,-1))\n",
+        "print(sum)\n",
+        "print(A.sum())\n",
+        "print(A.sum(axis=(0,1)))\n",
+        "print(np.sum([[1,2],[3,4]], axis=(0)))\n",
+        "print(np.sum([[1,2],[3,4]], axis=(-1)))\n",
+        "print()\n",
+        "sum = A.reshape(A.shape[:-2] + (-1,)).sum(axis=-1)\n",
+        "print(sum)"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[[2 9]\n",
+            "  [9 6]]\n",
+            "\n",
+            " [[0 7]\n",
+            "  [9 6]]]\n",
+            "\n",
+            "[26 22]\n",
+            "48\n",
+            "[20 28]\n",
+            "[4 6]\n",
+            "[3 7]\n",
+            "\n",
+            "[26 22]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
