--- a/numpyexercises.ipynb
+++ b/numpyexercises.ipynb
@@ -5063,21 +5063,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "N5DtyYk3ex0h"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "kRCw64uqMHNB"
       },
       "source": [
         "#### (66) (w, h, 3) の配列の形で表される色配列がある。 ユニークな色の数を求める。 (dtype=ubyte) とする\n",
         "\n",
-        "問題の意味不明 Considering a (w,h,3) image of (dtype=ubyte), compute the number of unique colors (★★★)"
+        "Considering a (w,h,3) image of (dtype=ubyte), compute the number of unique colors (★★★)"
       ]
     },
     {
@@ -5099,7 +5090,7 @@
         "n = len(np.unique(F))\n",
         "print(np.unique(I))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5140,9 +5131,9 @@
       "source": [
         "まず、\n",
         "\n",
-        "F = I[...,0]*256*256 + I[...,1]*256 +I[...,2]\n",
+        "`F = I[...,0]*256*256 + I[...,1]*256 +I[...,2]`\n",
         "\n",
-        "が機能していない。 やりたいことは、$16 \\times 16 \\times 3$ の配列の最後の 3 について、0 行目に 256 × 256、1 行目に 256 を掛けて、3 行を足すことによって、色の表現を配列から単なる数字に変換しようとしているのだろう。\n",
+        "が機能していない。 やりたいことは、$16 \\times 16 \\times 3$ の配列について、0 行目に 256 × 256、1 行目に 256 を掛けて、3 行を足すことによって、色の表現を配列から単なるフラットな数字に変換しようとしているのだろう。\n",
         "\n",
         "しかし、ubyte、である数字に大きな数を掛けて ubyte の範囲を超えると現在の仕様では 0 になってしまう。\n",
         "\n",
@@ -5161,7 +5152,7 @@
       "source": [
         "print(n)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5195,7 +5186,7 @@
         "\n",
         "I[...,0]*3"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5240,7 +5231,7 @@
         "\n",
         "I[...,0]*256*256"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5285,7 +5276,7 @@
         "\n",
         "I[...,0]*10*10"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5354,7 +5345,7 @@
         "print(n)\n",
         "\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5372,18 +5363,67 @@
         "id": "1zUfU4bXxoVc"
       },
       "source": [
-        "上記の結果で print(n) の値が 8 になるのは 8 が最大値で試験回数が多いからなので、仮に w,h = 4.4 として実行すると6とか7も出る。\n",
+        "上記の結果で print(n) の値が 8 になるのは 8 が最大値で試験回数が多いからなので、仮に w,h = 4.4 として実行すると8も出るし、6とか7も出る。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Urq0kPNfqBww"
+      },
+      "source": [
         "\n",
-        "print(np.unique(F)) \n",
+        "`print(np.unique(F)) `\n",
         "\n",
-        "の値が [0 1] になってしまうのは、np.unique の仕様が、配列をフラットにして unique をとる。下記の例では、一旦 reshape して、axis を指定して unique をとった。"
+        "の値が [0 1] になってしまうのは、np.unique の仕様が、配列をフラットにして unique をとる。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sPCtzCbjqPFQ",
+        "outputId": "c4da86a4-6236-4b1c-c164-b22c9575d9fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験\n",
+        "import numpy as np\n",
+        "\n",
+        "print (np.unique(np.array([1,2,3,2,1])))\n",
+        "print(np.unique(np.array([[1,2],[1,2],[2,3]])))\n",
+        "print(np.unique(np.array([[1,2],[1,2],[2,3]]), axis=0))"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1 2 3]\n",
+            "[1 2 3]\n",
+            "[[1 2]\n",
+            " [2 3]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "s4OelvUBqIvQ"
+      },
+      "source": [
+        "\n",
+        "下記の例では、一旦 reshape して、axis を指定して unique をとった。"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "dCPXrZiFbnYY",
-        "outputId": "d306bb28-4b73-43a8-a63e-b3d88f3f18fa",
+        "outputId": "27103151-6ae7-43d3-823e-13346e5f3ffa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -5401,13 +5441,13 @@
         "print(np.unique(F))\n",
         "np.unique(np.reshape(I, (w*h, 3)), axis=0)"
       ],
-      "execution_count": 48,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "6\n",
-            "[  0   1  11 101 110 111]\n"
+            "7\n",
+            "[  0   1  10  11 100 101 111]\n"
           ],
           "name": "stdout"
         },
@@ -5417,16 +5457,17 @@
             "text/plain": [
               "array([[0, 0, 0],\n",
               "       [0, 0, 1],\n",
+              "       [0, 1, 0],\n",
               "       [0, 1, 1],\n",
+              "       [1, 0, 0],\n",
               "       [1, 0, 1],\n",
-              "       [1, 1, 0],\n",
               "       [1, 1, 1]], dtype=uint8)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 48
+          "execution_count": 3
         }
       ]
     },
@@ -5462,7 +5503,7 @@
         "sum = A.reshape(A.shape[:-2] + (-1,)).sum(axis=-1)\n",
         "print(sum)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5491,44 +5532,46 @@
       "cell_type": "code",
       "metadata": {
         "id": "PewDm9WXCGqw",
-        "outputId": "1c7949d8-58e6-41d5-e1e5-784fa270e9bd",
+        "outputId": "07d37301-7e43-4fce-b652-477f90998dc0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "# 実験\n",
+        "# 3次元にして、それぞれの要素を2にしてみる。\n",
+        "\n",
         "A = np.random.randint(0,10,(2,2,2))\n",
         "print(A)\n",
         "print()\n",
-        "sum = A.sum(axis=(-2,-1))\n",
-        "print(sum)\n",
+        "sum = A.sum(axis=(-2,-1)) # これが正解\n",
+        "print(sum) # axis を指定しないとフラットな合計になってしまい、今回の目的に合わない\n",
         "print(A.sum())\n",
-        "print(A.sum(axis=(0,1)))\n",
+        "print(A.sum(axis=(0,1))) # 頭から足して行くとこうなる\n",
         "print(np.sum([[1,2],[3,4]], axis=(0)))\n",
         "print(np.sum([[1,2],[3,4]], axis=(-1)))\n",
         "print()\n",
         "sum = A.reshape(A.shape[:-2] + (-1,)).sum(axis=-1)\n",
         "print(sum)"
       ],
-      "execution_count": 62,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[[2 9]\n",
-            "  [9 6]]\n",
+            "[[[5 1]\n",
+            "  [4 8]]\n",
             "\n",
-            " [[0 7]\n",
-            "  [9 6]]]\n",
+            " [[4 3]\n",
+            "  [6 0]]]\n",
             "\n",
-            "[26 22]\n",
-            "48\n",
-            "[20 28]\n",
+            "[18 13]\n",
+            "31\n",
+            "[19 12]\n",
             "[4 6]\n",
             "[3 7]\n",
             "\n",
-            "[26 22]\n"
+            "[18 13]\n"
           ],
           "name": "stdout"
         }
@@ -5537,10 +5580,132 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "NrjvgyoQsNiM"
+      },
+      "source": [
+        "`sum = A.reshape(A.shape[:-2] + (-1,)).sum(axis=-1)`\n",
+        "\n",
+        "の reshape と shape がわからないので以下に実験してみる。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7tb7VR_dslit",
+        "outputId": "cd51c3aa-d32f-4e74-f932-8be247d64f59",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験\n",
+        "import numpy as np\n",
+        "\n",
+        "A = np.random.randint(0,10,(3,4,5,6,7,8))\n",
+        "\n",
+        "print(A.shape[:-2]+(-1,))\n",
+        "print(type(A.shape[:-2]))\n",
+        "print((1,)+(2,)+(3,))\n",
+        "\n",
+        "print()\n",
+        "\n",
+        "A = np.random.randint(0,10,(3,4,5))\n",
+        "print(A.reshape((6,10)))\n",
+        "print()\n",
+        "A.reshape(3,-1)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(3, 4, 5, 6, -1)\n",
+            "<class 'tuple'>\n",
+            "(1, 2, 3)\n",
+            "\n",
+            "[[5 9 3 9 2 2 0 1 2 2]\n",
+            " [7 8 5 3 5 3 7 7 3 7]\n",
+            " [1 7 6 4 0 7 8 4 3 3]\n",
+            " [3 7 8 5 5 4 3 9 4 2]\n",
+            " [1 9 1 1 9 8 1 7 6 4]\n",
+            " [6 2 0 2 1 9 4 2 6 9]]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[5, 9, 3, 9, 2, 2, 0, 1, 2, 2, 7, 8, 5, 3, 5, 3, 7, 7, 3, 7],\n",
+              "       [1, 7, 6, 4, 0, 7, 8, 4, 3, 3, 3, 7, 8, 5, 5, 4, 3, 9, 4, 2],\n",
+              "       [1, 9, 1, 1, 9, 8, 1, 7, 6, 4, 6, 2, 0, 2, 1, 9, 4, 2, 6, 9]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r7EldbB0C-nl",
+        "outputId": "d55dc3ce-98bd-490b-f8d9-683409546843",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験\n",
+        "\n",
+        "A = np.random.randint(0,10,(2,2,2))\n",
+        "print(A)\n",
+        "print()\n",
+        "A=A.reshape(A.shape[:-2] + (-1,))\n",
+        "print(A)\n",
+        "sum = A.sum(axis=-1)\n",
+        "print(sum)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[[2 6]\n",
+            "  [1 7]]\n",
+            "\n",
+            " [[3 4]\n",
+            "  [2 9]]]\n",
+            "\n",
+            "[[2 6 1 7]\n",
+            " [3 4 2 9]]\n",
+            "[16 18]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QB2ofgkiuMQz"
+      },
+      "source": [
+        "# いまここ "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "bnnj6J9TMHNF"
       },
       "source": [
-        "#### (68) Considering a one-dimensional vector D, how to compute means of subsets of D using a vector S of same size describing subset  indices? (★★★)"
+        "#### (68) \n",
+        "\n",
+        "Considering a one-dimensional vector D, how to compute means of subsets of D using a vector S of same size describing subset  indices? (★★★)"
       ]
     },
     {
