Colaboratory を使用して作成しました

--- a/numpyexercises.ipynb
+++ b/numpyexercises.ipynb
@@ -5395,7 +5395,7 @@
         "print(np.unique(np.array([[1,2],[1,2],[2,3]])))\n",
         "print(np.unique(np.array([[1,2],[1,2],[2,3]]), axis=0))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5441,7 +5441,7 @@
         "print(np.unique(F))\n",
         "np.unique(np.reshape(I, (w*h, 3)), axis=0)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5554,7 +5554,7 @@
         "sum = A.reshape(A.shape[:-2] + (-1,)).sum(axis=-1)\n",
         "print(sum)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5614,7 +5614,7 @@
         "print()\n",
         "A.reshape(3,-1)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5669,7 +5669,7 @@
         "sum = A.sum(axis=-1)\n",
         "print(sum)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5703,7 +5703,7 @@
         "id": "bnnj6J9TMHNF"
       },
       "source": [
-        "#### (68) \n",
+        "#### (68) 1次元のベクトルDを考え、インデックスのベクトルSを使用して、Dのサブセットの平均を計算する。\n",
         "\n",
         "Considering a one-dimensional vector D, how to compute means of subsets of D using a vector S of same size describing subset  indices? (★★★)"
       ]
@@ -5711,10 +5711,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-PTdegb3MHNH"
+        "id": "-PTdegb3MHNH",
+        "outputId": "5e9a76d4-11ed-4508-d8f5-d97e11db59f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Author: Jaime Fernández del Río\n",
+        "import numpy as np\n",
         "\n",
         "D = np.random.uniform(0,1,100)\n",
         "S = np.random.randint(0,10,100)\n",
@@ -5727,8 +5732,57 @@
         "import pandas as pd\n",
         "print(pd.Series(D).groupby(S).mean())"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0.45557996 0.58533938 0.49114096 0.34501826 0.5088286  0.46826944\n",
+            " 0.40226913 0.37693339 0.49821353 0.64258493]\n",
+            "0    0.455580\n",
+            "1    0.585339\n",
+            "2    0.491141\n",
+            "3    0.345018\n",
+            "4    0.508829\n",
+            "5    0.468269\n",
+            "6    0.402269\n",
+            "7    0.376933\n",
+            "8    0.498214\n",
+            "9    0.642585\n",
+            "dtype: float64\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u8X_27qdNYlo",
+        "outputId": "f37b73fd-079a-4db2-c62f-a8d09c59edc5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "np.random.uniform(-10,10,10)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1.53286703, -5.1715633 , -0.17401356, -4.10656656, -6.76862734,\n",
+              "       -5.75546482,  1.12511709, -3.38309724,  9.91137681,  3.27684319])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "markdown",
