Colaboratory を使用して作成しました

--- a/haskell01.ipynb
+++ b/haskell01.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMxHVvOafaKzNUsuL0oWNfe",
+      "authorship_tag": "ABX9TyMfNIj3z5iMnY0iIHqbAQ1f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,6 +55,75 @@
         "\n",
         "  \n",
         "  \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S-NYRxs4SuLf"
+      },
+      "source": [
+        "!curl -sSL https://get.haskellstack.org/ | sh"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uFBBZYLDS8Ed",
+        "outputId": "2c13aa11-a262-49b1-8ea4-85398cfec7e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!stack --version\n"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Version 2.5.1, Git revision d6ab861544918185236cf826cb2028abb266d6d5 x86_64 hpack-0.33.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SvIkXNjIU6iv"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ba2HY_gpTx4I",
+        "outputId": "acb58698-51c0-408f-faae-c338517f9304",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile hello.hs\n",
+        "main = putStrLn \"hello, world\""
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing hello.hs\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
