--- a/haskell01.ipynb
+++ b/haskell01.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMfNIj3z5iMnY0iIHqbAQ1f",
+      "authorship_tag": "ABX9TyN56sLHvINYhLQVa5zPnRkP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,19 +60,39 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S-NYRxs4SuLf"
+        "id": "S-NYRxs4SuLf",
+        "outputId": "ec33098c-9462-4085-e6dd-a2d7dd2b3c99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!curl -sSL https://get.haskellstack.org/ | sh"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Stack version 2.5.1 already appears to be installed at:\n",
+            "  /usr/local/bin/stack\n",
+            "\n",
+            "Use 'stack upgrade' or your OS's package manager to upgrade,\n",
+            "or pass '-f' to this script to over-write the existing binary, e.g.:\n",
+            "  curl -sSL https://get.haskellstack.org/ | sh -s - -f\n",
+            "\n",
+            "To install to a different location, pass '-d DESTDIR', e.g.:\n",
+            "  curl -sSL https://get.haskellstack.org/ | sh -s - -d /opt/stack/bin\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "uFBBZYLDS8Ed",
-        "outputId": "2c13aa11-a262-49b1-8ea4-85398cfec7e1",
+        "outputId": "73a1d6be-2f73-48e2-bdda-88e4e19eaca9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -80,7 +100,7 @@
       "source": [
         "!stack --version\n"
       ],
-      "execution_count": 6,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,13 +114,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SvIkXNjIU6iv"
+        "id": "SvIkXNjIU6iv",
+        "outputId": "47cd81b8-97df-4008-cd6f-70b7af33295f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "!stack runghc hello.hs\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[0mPreparing to install GHC to an isolated location.\u001b[0m\n",
+            "\u001b[0mThis will not interfere with any system-level installation.\u001b[0m\n",
+            "Preparing to download ghc-8.8.4 ...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                   \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\u001b[0mAlready downloaded.\u001b[0m\n",
+            "Unpacking GHC into /root/.stack/programs/x86_64-linux/ghc-8.8.4.temp/ ...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                                         \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bConfiguring GHC ...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                   \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bInstalling GHC ...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                  \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\u001b[0mInstalled GHC.\u001b[0m\n",
+            "hello, world\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -115,7 +151,7 @@
         "%%writefile hello.hs\n",
         "main = putStrLn \"hello, world\""
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
