Colaboratory を使用して作成しました

--- a/haskell01.ipynb
+++ b/haskell01.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN56sLHvINYhLQVa5zPnRkP",
+      "authorship_tag": "ABX9TyN5uPIDFrJ4rMg6aDefu3Sf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,33 +60,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S-NYRxs4SuLf",
-        "outputId": "ec33098c-9462-4085-e6dd-a2d7dd2b3c99",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "S-NYRxs4SuLf"
       },
       "source": [
+        "# haskell stack のインストール\n",
+        "\n",
         "!curl -sSL https://get.haskellstack.org/ | sh"
       ],
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Stack version 2.5.1 already appears to be installed at:\n",
-            "  /usr/local/bin/stack\n",
-            "\n",
-            "Use 'stack upgrade' or your OS's package manager to upgrade,\n",
-            "or pass '-f' to this script to over-write the existing binary, e.g.:\n",
-            "  curl -sSL https://get.haskellstack.org/ | sh -s - -f\n",
-            "\n",
-            "To install to a different location, pass '-d DESTDIR', e.g.:\n",
-            "  curl -sSL https://get.haskellstack.org/ | sh -s - -d /opt/stack/bin\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -98,41 +80,16 @@
         }
       },
       "source": [
+        "# インストールされたことの確認\n",
+        "\n",
         "!stack --version\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Version 2.5.1, Git revision d6ab861544918185236cf826cb2028abb266d6d5 x86_64 hpack-0.33.0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "SvIkXNjIU6iv",
-        "outputId": "47cd81b8-97df-4008-cd6f-70b7af33295f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "!stack runghc hello.hs\n"
-      ],
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\u001b[0mPreparing to install GHC to an isolated location.\u001b[0m\n",
-            "\u001b[0mThis will not interfere with any system-level installation.\u001b[0m\n",
-            "Preparing to download ghc-8.8.4 ...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                   \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\u001b[0mAlready downloaded.\u001b[0m\n",
-            "Unpacking GHC into /root/.stack/programs/x86_64-linux/ghc-8.8.4.temp/ ...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                                         \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bConfiguring GHC ...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                   \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bInstalling GHC ...\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                  \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\u001b[0mInstalled GHC.\u001b[0m\n",
-            "hello, world\n"
           ],
           "name": "stdout"
         }
@@ -165,78 +122,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GB-qmhO5gBvV"
-      },
-      "source": [
-        "# 実験\n",
-        "\n",
-        "%%script false\n",
-        "\n",
-        "Prelude> \"Hello, World!\"  \n",
-        "\"Hello, World!\"  "
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "-VqZEOXlgWzU"
-      },
-      "source": [
-        "ghci 対話環境のコピーを colab に貼り付ける際、コードセルを使うこととする。\n",
-        "\n",
-        "セルマジックで %%script false としておけば実行されないので便利。\n",
-        "\n",
-        "Python のコードは多くの場合、見ればわかると思う。\n",
-        "  \n",
-        "  \n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "wQLaoIt5_fdD",
-        "outputId": "dd814f34-6b50-4f90-e49c-876daa265379",
+        "id": "SvIkXNjIU6iv",
+        "outputId": "a5afe957-7cff-4bf6-cf16-99b0d612f984",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "# Python \n",
-        "\n",
-        "\"Hello, World\""
+        "!stack runghc hello.hs\n"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'Hello, World'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 1
+          "output_type": "stream",
+          "text": [
+            "hello, world\n"
+          ],
+          "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZBaOsWtP_nC7"
-      },
-      "source": [
-        "この辺は動きは同じみたい。\n",
-        "\n",
-        "Haskellの対話型環境のプロンプトは `Prelude> `。\n",
-        "  "
       ]
     },
     {
@@ -262,6 +165,8 @@
         }
       },
       "source": [
+        "# python\n",
+        "\n",
         "print (\"Hello\")"
       ],
       "execution_count": null,
@@ -281,7 +186,7 @@
         "id": "ViF69Gd1AQy_"
       },
       "source": [
-        "えっと、Haskellは `putStrLn` で、Pythonがなぜ `print` か。Haskellにも `print` はあるし、改行も自動で入る。  \n",
+        "Haskellは `putStrLn` と `print` があるし、改行も自動で入る。  \n",
         "改行コードをエスケープで入れたときの挙動とかが違う。\n",
         "  \n",
         "  \n"
