--- a/haskell01.ipynb
+++ b/haskell01.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPS38ILRYE55gY68biVkBkY",
+      "authorship_tag": "ABX9TyMfL38E+eFN0uoKb82hpPlp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         "\n",
         "1. Colab の環境を利用して Haskellを勉強する。\n",
         "1. Colab の環境は Hakell はインストールされていないので、インストールする。\n",
-        "1. 無料の Colab の場合、12時間でクリアされてしまうので再インストールが必要。\n",
+        "1. 無料の Colab の場合、数時間でクリアされてしまうので再インストールが必要。\n",
         "1. Colab の環境で Haskell のインタラクティブ環境は使えないので、`%%writefile filename.hs` でファイルを作り、`!stack runghc filename.hs` で実行する。\n",
         "\n",
         "1. とりあえずは Haskell の入門書や入門サイトからサンプルプログラムを入力してみる。\n",
@@ -62,15 +62,98 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S-NYRxs4SuLf"
+        "id": "S-NYRxs4SuLf",
+        "outputId": "4e94eaa3-7c7c-477c-e147-26c84999ceb1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# haskell stack のインストール\n",
         "\n",
         "!curl -sSL https://get.haskellstack.org/ | sh\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Detected Linux distribution: ubuntu\n",
+            "\n",
+            "Installing dependencies...\n",
+            "\n",
+            "\n",
+            "About to use 'sudo' to run the following command as root:\n",
+            "    apt-get install -y libffi-dev libgmp-dev netbase\n",
+            "in order to install required system dependencies.\n",
+            "\n",
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "The following additional packages will be installed:\n",
+            "  libgmpxx4ldbl\n",
+            "Suggested packages:\n",
+            "  gmp-doc libgmp10-doc libmpfr-dev\n",
+            "The following NEW packages will be installed:\n",
+            "  libffi-dev libgmp-dev libgmpxx4ldbl netbase\n",
+            "0 upgraded, 4 newly installed, 0 to remove and 12 not upgraded.\n",
+            "Need to get 494 kB of archives.\n",
+            "After this operation, 2,075 kB of additional disk space will be used.\n",
+            "Get:1 http://archive.ubuntu.com/ubuntu bionic/main amd64 netbase all 5.4 [12.7 kB]\n",
+            "Get:2 http://archive.ubuntu.com/ubuntu bionic/main amd64 libgmpxx4ldbl amd64 2:6.1.2+dfsg-2 [8,964 B]\n",
+            "Get:3 http://archive.ubuntu.com/ubuntu bionic/main amd64 libgmp-dev amd64 2:6.1.2+dfsg-2 [316 kB]\n",
+            "Get:4 http://archive.ubuntu.com/ubuntu bionic/main amd64 libffi-dev amd64 3.2.1-8 [156 kB]\n",
+            "Fetched 494 kB in 1s (485 kB/s)\n",
+            "debconf: unable to initialize frontend: Dialog\n",
+            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 76, <> line 4.)\n",
+            "debconf: falling back to frontend: Readline\n",
+            "debconf: unable to initialize frontend: Readline\n",
+            "debconf: (This frontend requires a controlling tty.)\n",
+            "debconf: falling back to frontend: Teletype\n",
+            "dpkg-preconfigure: unable to re-open stdin: \n",
+            "Selecting previously unselected package netbase.\n",
+            "(Reading database ... 144786 files and directories currently installed.)\n",
+            "Preparing to unpack .../archives/netbase_5.4_all.deb ...\n",
+            "Unpacking netbase (5.4) ...\n",
+            "Selecting previously unselected package libgmpxx4ldbl:amd64.\n",
+            "Preparing to unpack .../libgmpxx4ldbl_2%3a6.1.2+dfsg-2_amd64.deb ...\n",
+            "Unpacking libgmpxx4ldbl:amd64 (2:6.1.2+dfsg-2) ...\n",
+            "Selecting previously unselected package libgmp-dev:amd64.\n",
+            "Preparing to unpack .../libgmp-dev_2%3a6.1.2+dfsg-2_amd64.deb ...\n",
+            "Unpacking libgmp-dev:amd64 (2:6.1.2+dfsg-2) ...\n",
+            "Selecting previously unselected package libffi-dev:amd64.\n",
+            "Preparing to unpack .../libffi-dev_3.2.1-8_amd64.deb ...\n",
+            "Unpacking libffi-dev:amd64 (3.2.1-8) ...\n",
+            "Setting up libffi-dev:amd64 (3.2.1-8) ...\n",
+            "Setting up libgmpxx4ldbl:amd64 (2:6.1.2+dfsg-2) ...\n",
+            "Setting up netbase (5.4) ...\n",
+            "Setting up libgmp-dev:amd64 (2:6.1.2+dfsg-2) ...\n",
+            "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n",
+            "Processing triggers for libc-bin (2.27-3ubuntu1.2) ...\n",
+            "/sbin/ldconfig.real: /usr/local/lib/python3.6/dist-packages/ideep4py/lib/libmkldnn.so.0 is not a symbolic link\n",
+            "\n",
+            "\n",
+            "Using generic bindist...\n",
+            "\n",
+            "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+            "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+            "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+            "100   655  100   655    0     0   1238      0 --:--:-- --:--:-- --:--:--  1238\n",
+            "100 13.8M  100 13.8M    0     0  9061k      0  0:00:01  0:00:01 --:--:-- 39.9M\n",
+            "Installing Stack to: /usr/local/bin/stack...\n",
+            "\n",
+            "-------------------------------------------------------------------------------\n",
+            "\n",
+            "Stack has been installed to: /usr/local/bin/stack\n",
+            "\n",
+            "WARNING: '/root/.local/bin' is not on your PATH.\n",
+            "    Stack will place the binaries it builds in '/root/.local/bin' so\n",
+            "    for best results, please add it to the beginning of PATH in your profile.\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -86,7 +169,7 @@
         "\n",
         "!stack --version\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -564,7 +647,7 @@
         "!stack eval 'putStrLn \"hello world\"'\n",
         "!stack eval 'putStrLn \"hello world\"'"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -588,7 +671,7 @@
       "source": [
         "!stack eval 'print $ truncate (-6.59)'"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -622,7 +705,7 @@
         "\n",
         "!stack eval 'floor(-6.59)' #=> -7"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -657,7 +740,7 @@
         "!stack eval 'do {putStr \"2 + 2 = \"; print(2 + 2)}'\n",
         "!stack eval 'do { putStrLn \"ABCDE\" ; putStrLn \"12345\" }  '"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -668,15 +751,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "D3xU8F1FEZXc"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -702,7 +776,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "iOEMdj3kkbsb",
-        "outputId": "f290b3b5-6aa1-4402-8649-88469e8ce81a",
+        "outputId": "3056df5a-8d9e-4815-e8c7-8da141c34dd3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -711,13 +785,13 @@
         "!stack eval '5::Int'\n",
         "!stack eval '5::Double'"
       ],
-      "execution_count": 39,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "5\n",
-            "5.0\n"
+            "/bin/bash: stack: command not found\n",
+            "/bin/bash: stack: command not found\n"
           ],
           "name": "stdout"
         }
@@ -736,43 +810,28 @@
       "cell_type": "code",
       "metadata": {
         "id": "R8mbMN4HkmLf",
-        "outputId": "3471ecde-1b5d-4179-9220-383f62800750",
+        "outputId": "3d2a93fc-6c13-4018-ceb2-c82a9c5f5237",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "!stack eval ':t True'\n",
-        "!stack eval ':t \\'X\\''"
+        "!stack eval $':t \\'X\\''\n",
+        "!stack eval ':t \"hello haskell\"'"
       ],
-      "execution_count": 42,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "True :: Bool\n",
-            "/bin/bash: -c: line 0: unexpected EOF while looking for matching `''\n",
-            "/bin/bash: -c: line 1: syntax error: unexpected end of file\n"
+            "'X' :: Char\n",
+            "\"hello haskell\" :: [Char]\n"
           ],
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "GlGUQsxNFu41"
-      },
-      "source": [
-        "Prelude> :t True\n",
-        "True :: Bool\n",
-        "Prelude> :t 'X'\n",
-        "'X' :: Char\n",
-        "Prelude> :t \"Hello, Haskell\"\n",
-        "\"Hello, Haskell\" :: [Char]"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -786,18 +845,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Rl2CyyheJFZQ"
+        "id": "Rl2CyyheJFZQ",
+        "outputId": "cf57cb21-40ed-4731-b947-9c80ee39097d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "Prelude> :t 42\n",
-        "42 :: (Num t) => t\n",
-        "Prelude> :t 42.0\n",
-        "42.0 :: (Fractional t) => t\n",
-        "Prelude> :t gcd 15 20\n",
-        "gcd 15 20 :: (Integral t) => t"
+        "!stack eval ':t 42'\n",
+        "!stack eval ':t 42.0'\n",
+        "!stack eval ':t gcd 15 20'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "42 :: Num p => p\n",
+            "42.0 :: Fractional p => p\n",
+            "gcd 15 20 :: Integral a => a\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -811,16 +881,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IAFEJNfKJvd0"
+        "id": "IAFEJNfKJvd0",
+        "outputId": "e1ec5254-82f8-4236-b89c-9e77224eaf62",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "Prelude> ()\n",
-        "()\n",
-        "Prelude> :t ()\n",
-        "() :: ()"
+        "!stack eval 'print ()'\n",
+        "!stack eval ':t ()'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "()\n",
+            "() :: ()\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -838,28 +919,44 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lXxY_lLRKAk2"
+        "id": "lXxY_lLRKAk2",
+        "outputId": "42ee345f-98f2-4555-ba6a-831e86221555",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "Prelude> [1, 2, 3]\n",
-        "[1,2,3]\n",
-        "Prelude> [1 .. 5]\n",
-        "[1,2,3,4,5]\n",
-        "Prelude> [1, 3 .. 10]\n",
-        "[1,3,5,7,9]\n",
-        "Prelude> [True, False, True]\n",
-        "[True,False,True]\n",
-        "\n",
-        "Prelude> ['H', 'e', 'l', 'l', 'o']\n",
-        "\"Hello\"\n",
-        "\n",
-        "# Lisp の cons 関数に当たる `:`\n",
-        "\n",
-        "Prelude> 'C' : ['H', 'e', 'l', 'l', 'o']\n",
-        "\"CHello\""
+        "!stack eval '[1, 2, 3]'\n",
+        "!stack eval '[1 .. 5]'\n",
+        "!stack eval '[1, 3 .. 10]'\n",
+        "!stack eval '[True, False, True]'\n",
+        "!stack eval $'[\\'H\\', \\'e\\', \\'l\\', \\'l\\', \\'o\\']'\n",
+        "!stack eval $'\\'C\\' : [\\'H\\', \\'e\\', \\'l\\', \\'l\\', \\'o\\']'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1,2,3]\n",
+            "[1,2,3,4,5]\n",
+            "[1,3,5,7,9]\n",
+            "[True,False,True]\n",
+            "\"Hello\"\n",
+            "\"CHello\"\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jSG0fx1bPLqB"
+      },
+      "source": [
+        "# いまここ"
+      ]
     },
     {
       "cell_type": "markdown",
