--- a/haskell01.ipynb
+++ b/haskell01.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMfL38E+eFN0uoKb82hpPlp",
+      "authorship_tag": "ABX9TyNCTb19Piu0zfe1zxDtCPFN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,104 +62,21 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S-NYRxs4SuLf",
-        "outputId": "4e94eaa3-7c7c-477c-e147-26c84999ceb1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "S-NYRxs4SuLf"
       },
       "source": [
         "# haskell stack のインストール\n",
         "\n",
         "!curl -sSL https://get.haskellstack.org/ | sh\n"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Detected Linux distribution: ubuntu\n",
-            "\n",
-            "Installing dependencies...\n",
-            "\n",
-            "\n",
-            "About to use 'sudo' to run the following command as root:\n",
-            "    apt-get install -y libffi-dev libgmp-dev netbase\n",
-            "in order to install required system dependencies.\n",
-            "\n",
-            "Reading package lists... Done\n",
-            "Building dependency tree       \n",
-            "Reading state information... Done\n",
-            "The following additional packages will be installed:\n",
-            "  libgmpxx4ldbl\n",
-            "Suggested packages:\n",
-            "  gmp-doc libgmp10-doc libmpfr-dev\n",
-            "The following NEW packages will be installed:\n",
-            "  libffi-dev libgmp-dev libgmpxx4ldbl netbase\n",
-            "0 upgraded, 4 newly installed, 0 to remove and 12 not upgraded.\n",
-            "Need to get 494 kB of archives.\n",
-            "After this operation, 2,075 kB of additional disk space will be used.\n",
-            "Get:1 http://archive.ubuntu.com/ubuntu bionic/main amd64 netbase all 5.4 [12.7 kB]\n",
-            "Get:2 http://archive.ubuntu.com/ubuntu bionic/main amd64 libgmpxx4ldbl amd64 2:6.1.2+dfsg-2 [8,964 B]\n",
-            "Get:3 http://archive.ubuntu.com/ubuntu bionic/main amd64 libgmp-dev amd64 2:6.1.2+dfsg-2 [316 kB]\n",
-            "Get:4 http://archive.ubuntu.com/ubuntu bionic/main amd64 libffi-dev amd64 3.2.1-8 [156 kB]\n",
-            "Fetched 494 kB in 1s (485 kB/s)\n",
-            "debconf: unable to initialize frontend: Dialog\n",
-            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 76, <> line 4.)\n",
-            "debconf: falling back to frontend: Readline\n",
-            "debconf: unable to initialize frontend: Readline\n",
-            "debconf: (This frontend requires a controlling tty.)\n",
-            "debconf: falling back to frontend: Teletype\n",
-            "dpkg-preconfigure: unable to re-open stdin: \n",
-            "Selecting previously unselected package netbase.\n",
-            "(Reading database ... 144786 files and directories currently installed.)\n",
-            "Preparing to unpack .../archives/netbase_5.4_all.deb ...\n",
-            "Unpacking netbase (5.4) ...\n",
-            "Selecting previously unselected package libgmpxx4ldbl:amd64.\n",
-            "Preparing to unpack .../libgmpxx4ldbl_2%3a6.1.2+dfsg-2_amd64.deb ...\n",
-            "Unpacking libgmpxx4ldbl:amd64 (2:6.1.2+dfsg-2) ...\n",
-            "Selecting previously unselected package libgmp-dev:amd64.\n",
-            "Preparing to unpack .../libgmp-dev_2%3a6.1.2+dfsg-2_amd64.deb ...\n",
-            "Unpacking libgmp-dev:amd64 (2:6.1.2+dfsg-2) ...\n",
-            "Selecting previously unselected package libffi-dev:amd64.\n",
-            "Preparing to unpack .../libffi-dev_3.2.1-8_amd64.deb ...\n",
-            "Unpacking libffi-dev:amd64 (3.2.1-8) ...\n",
-            "Setting up libffi-dev:amd64 (3.2.1-8) ...\n",
-            "Setting up libgmpxx4ldbl:amd64 (2:6.1.2+dfsg-2) ...\n",
-            "Setting up netbase (5.4) ...\n",
-            "Setting up libgmp-dev:amd64 (2:6.1.2+dfsg-2) ...\n",
-            "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n",
-            "Processing triggers for libc-bin (2.27-3ubuntu1.2) ...\n",
-            "/sbin/ldconfig.real: /usr/local/lib/python3.6/dist-packages/ideep4py/lib/libmkldnn.so.0 is not a symbolic link\n",
-            "\n",
-            "\n",
-            "Using generic bindist...\n",
-            "\n",
-            "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-            "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
-            "100   655  100   655    0     0   1238      0 --:--:-- --:--:-- --:--:--  1238\n",
-            "100 13.8M  100 13.8M    0     0  9061k      0  0:00:01  0:00:01 --:--:-- 39.9M\n",
-            "Installing Stack to: /usr/local/bin/stack...\n",
-            "\n",
-            "-------------------------------------------------------------------------------\n",
-            "\n",
-            "Stack has been installed to: /usr/local/bin/stack\n",
-            "\n",
-            "WARNING: '/root/.local/bin' is not on your PATH.\n",
-            "    Stack will place the binaries it builds in '/root/.local/bin' so\n",
-            "    for best results, please add it to the beginning of PATH in your profile.\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "uFBBZYLDS8Ed",
-        "outputId": "79b00fb0-e30a-49ed-df95-08feb5cfee44",
+        "outputId": "001f6565-81d7-421c-eff2-48af72bc22ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -169,7 +86,7 @@
         "\n",
         "!stack --version\n"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -785,7 +702,7 @@
         "!stack eval '5::Int'\n",
         "!stack eval '5::Double'"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -820,7 +737,7 @@
         "!stack eval $':t \\'X\\''\n",
         "!stack eval ':t \"hello haskell\"'"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -856,7 +773,7 @@
         "!stack eval ':t 42.0'\n",
         "!stack eval ':t gcd 15 20'"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -891,7 +808,7 @@
         "!stack eval 'print ()'\n",
         "!stack eval ':t ()'"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -920,7 +837,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "lXxY_lLRKAk2",
-        "outputId": "42ee345f-98f2-4555-ba6a-831e86221555",
+        "outputId": "ac4e0b6c-9530-4924-a3f7-46cb286f80eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -931,9 +848,9 @@
         "!stack eval '[1, 3 .. 10]'\n",
         "!stack eval '[True, False, True]'\n",
         "!stack eval $'[\\'H\\', \\'e\\', \\'l\\', \\'l\\', \\'o\\']'\n",
-        "!stack eval $'\\'C\\' : [\\'H\\', \\'e\\', \\'l\\', \\'l\\', \\'o\\']'"
+        "!stack eval $'\\'C\\' : [\\'H\\', \\'e\\', \\'l\\', \\'l\\', \\'o\\']'\n"
       ],
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -943,19 +860,11 @@
             "[1,3,5,7,9]\n",
             "[True,False,True]\n",
             "\"Hello\"\n",
+            "\"CHello\"\n",
             "\"CHello\"\n"
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "jSG0fx1bPLqB"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -970,16 +879,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PRZJdUhP2-8w"
+        "id": "PRZJdUhP2-8w",
+        "outputId": "38afcd18-ad61-4f7e-9e27-330f89b3909f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "Prelude> (1, True)\n",
-        "(1,True)\n",
-        "Prelude> zip [1 .. 5] ['a' .. 'e']\n",
-        "[(1,'a'),(2,'b'),(3,'c'),(4,'d'),(5,'e')]\n"
+        "!stack eval '(1, True)'\n",
+        "!stack eval $'zip [1 .. 5] [\\'a\\' .. \\'e\\']'\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(1,True)\n",
+            "[(1,'a'),(2,'b'),(3,'c'),(4,'d'),(5,'e')]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jSG0fx1bPLqB"
+      },
+      "source": [
+        "# いまここ"
+      ]
     },
     {
       "cell_type": "code",
