Colaboratory を使用して作成しました

--- a/rust01.ipynb
+++ b/rust01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "rust01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPFv1yirpJ9LlOB3Lol44Et",
+      "authorship_tag": "ABX9TyP9fBboPxANygdJDmD5nvc7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,6 +22,19 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/kalz2q/mycolabnotebooks/blob/master/rust01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Z5PU-iNA6q3p"
+      },
+      "source": [
+        "# メモ\n",
+        "\n",
+        "1. Colab で実行しながら読まれることを想定している。\n",
+        "1. Rust の勉強\n",
+        "1. 資料は本家のテュートリアル https://rust-cli.github.io/book/index.html"
       ]
     },
     {
@@ -133,7 +146,7 @@
       },
       "source": [
         "# 実験\n",
-        "# 名前を買えてみる\n",
+        "# 名前を変えてみる\n",
         "%%writefile hoge.rs\n",
         "fn main() {\n",
         "    println!(\"hoge, world!\");\n",
@@ -170,6 +183,262 @@
           "output_type": "stream",
           "text": [
             "hoge, world!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pAqxIySQ7GiU"
+      },
+      "source": [
+        "# テュートリアルより\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wmYAtznw7WSe"
+      },
+      "source": [
+        "# テュートリアルより最初の課題\n",
+        "# 次のような動作をするgrrsをつくる。\n",
+        "\n",
+        "# $ cat test.txt\n",
+        "# foo: 10\n",
+        "# bar: 20\n",
+        "# baz: 30\n",
+        "# $ grrs foo test.txt\n",
+        "# foo: 10\n",
+        "# $ grrs --help\n",
+        "# [some help text explaining the available options]\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z9u503QJ7NZQ",
+        "outputId": "5d269d4e-457f-41d0-f3be-f1226109d712",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile grrs01.rs\n",
+        "fn main() {\n",
+        "    let pattern = std::env::args().nth(1).expect(\"no pattern given\");\n",
+        "    let path = std::env::args().nth(2).expect(\"no path given\");\n",
+        "}"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing grrs01.rs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EPeu_cRi71__"
+      },
+      "source": [
+        "# 実験\n",
+        "!rustc grrs01.rs\n",
+        "!./grrs01"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p7dxeUrLO3Xu",
+        "outputId": "505b4ea2-3738-4dac-d80e-52bd88806dca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# !export USER=$USER\n",
+        "%env USER=root\n",
+        "!cargo init"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "env: USER=root\n",
+            "\u001b[0m\u001b[0m\u001b[1m\u001b[32m     Created\u001b[0m binary (application) package\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E4RVJOPCRThK",
+        "outputId": "934f7245-8e2a-4607-bce2-b4fa52a44ff9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!cat Cargo.toml"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[package]\n",
+            "name = \"content\"\n",
+            "version = \"0.1.0\"\n",
+            "authors = [\"root\"]\n",
+            "edition = \"2018\"\n",
+            "\n",
+            "# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html\n",
+            "\n",
+            "[dependencies]\n",
+            "\n",
+            "[[bin]]\n",
+            "name = \"content\"\n",
+            "path = \"main.rs\"\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f4T2MtJETNLB",
+        "outputId": "1b40f64b-9174-4d2f-b3de-1bac7dce40dd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile Cargo.toml\n",
+        "[package]\n",
+        "name = \"content\"\n",
+        "version = \"0.1.0\"\n",
+        "authors = [\"root\"]\n",
+        "edition = \"2018\"\n",
+        "\n",
+        "# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html\n",
+        "\n",
+        "[dependencies]\n",
+        "structopt = \"0.3.13\"\n",
+        "\n",
+        "[[bin]]\n",
+        "name = \"content\"\n",
+        "path = \"main.rs\""
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting Cargo.toml\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dpsoBNwA8iPv",
+        "outputId": "ae216045-0e6a-40f5-9989-50163f5d2221",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile grrs01.rs\n",
+        "use structopt::StructOpt;\n",
+        "\n",
+        "/// Search for a pattern in a file and display the lines that contain it.\n",
+        "#[derive(StructOpt)]\n",
+        "struct Cli {\n",
+        "    /// The pattern to look for\n",
+        "    pattern: String,\n",
+        "    /// The path to the file to read\n",
+        "    #[structopt(parse(from_os_str))]\n",
+        "    path: std::path::PathBuf,\n",
+        "}\n",
+        "\n",
+        "fn main() {\n",
+        "    let pattern = std::env::args().nth(1).expect(\"no pattern given\");\n",
+        "    let path = std::env::args().nth(2).expect(\"no path given\");\n",
+        "}"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting grrs01.rs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8AmSOcgvTmP1",
+        "outputId": "69f90f16-ef7b-4f5c-da9d-d677b62537bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!rustc grrs01.rs\n",
+        "!./grrs01"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[0m\u001b[1m\u001b[38;5;9merror[E0432]\u001b[0m\u001b[0m\u001b[1m: unresolved import `structopt`\u001b[0m\n",
+            "\u001b[0m \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m--> \u001b[0m\u001b[0mgrrs01.rs:1:5\u001b[0m\n",
+            "\u001b[0m  \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m|\u001b[0m\n",
+            "\u001b[0m\u001b[1m\u001b[38;5;12m1\u001b[0m\u001b[0m \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m| \u001b[0m\u001b[0muse structopt::StructOpt;\u001b[0m\n",
+            "\u001b[0m  \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m| \u001b[0m\u001b[0m    \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;9m^^^^^^^^^\u001b[0m\u001b[0m \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;9mmaybe a missing crate `structopt`?\u001b[0m\n",
+            "\n",
+            "\u001b[0m\u001b[1m\u001b[38;5;9merror\u001b[0m\u001b[0m\u001b[1m: cannot determine resolution for the derive macro `StructOpt`\u001b[0m\n",
+            "\u001b[0m \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m--> \u001b[0m\u001b[0mgrrs01.rs:4:10\u001b[0m\n",
+            "\u001b[0m  \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m|\u001b[0m\n",
+            "\u001b[0m\u001b[1m\u001b[38;5;12m4\u001b[0m\u001b[0m \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m| \u001b[0m\u001b[0m#[derive(StructOpt)]\u001b[0m\n",
+            "\u001b[0m  \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m| \u001b[0m\u001b[0m         \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;9m^^^^^^^^^\u001b[0m\n",
+            "\u001b[0m  \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m|\u001b[0m\n",
+            "\u001b[0m  \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m= \u001b[0m\u001b[0m\u001b[1mnote\u001b[0m\u001b[0m: import resolution is stuck, try simplifying macro imports\u001b[0m\n",
+            "\n",
+            "\u001b[0m\u001b[1m\u001b[38;5;9merror\u001b[0m\u001b[0m\u001b[1m: cannot find attribute `structopt` in this scope\u001b[0m\n",
+            "\u001b[0m \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m--> \u001b[0m\u001b[0mgrrs01.rs:9:7\u001b[0m\n",
+            "\u001b[0m  \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m|\u001b[0m\n",
+            "\u001b[0m\u001b[1m\u001b[38;5;12m9\u001b[0m\u001b[0m \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m| \u001b[0m\u001b[0m    #[structopt(parse(from_os_str))]\u001b[0m\n",
+            "\u001b[0m  \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;12m| \u001b[0m\u001b[0m      \u001b[0m\u001b[0m\u001b[1m\u001b[38;5;9m^^^^^^^^^\u001b[0m\n",
+            "\n",
+            "\u001b[0m\u001b[1m\u001b[38;5;9merror\u001b[0m\u001b[0m\u001b[1m: aborting due to 3 previous errors\u001b[0m\n",
+            "\n",
+            "\u001b[0m\u001b[1mFor more information about this error, try `rustc --explain E0432`.\u001b[0m\n",
+            "thread 'main' panicked at 'no pattern given', grrs01.rs:2:19\n",
+            "note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace\n"
           ],
           "name": "stdout"
         }
